2010-05-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-resolve-references-for-sequence-type):
	resolve references for inline structures (which are not referenced
	in the wsdl namespaces)
	(soap-parse-sequence): intern element names

2010-05-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-encode-basic-type): encode an emacs style
	time value such as received by (current-time) into the xsd format.
	(soap-encode-body): when encoding literal documents, make the
	toplevel tags unqualified and add their namespace to the tag
	itself
	(soap-encode-body): add the "soapenc:encodingStyle" attribute only
	for encoded documents.

2010-05-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-bound-operation): new struct
	(soap-binding): rename soap-actions to operations
	(soap-l2wsdl): new function
	(soap-resolve-references-for-operation): if no parameter-order is
	specified, construct a default one.
	(soap-resolve-references-for-binding): resolve references in
	bound-operations
	(soap-parse-message): recognize the 'element attribute
	(soap-parse-binding): extract the soap-action and use for every
	operation in this binding.
	(soap-parse-envelope, soap-parse-response, soap-encode-body)
	(soap-create-envelope, soap-invoke): handle literal vs encoded
	bodies
	(soap-parse-response): corrected message check
	(soap-invoke): increased buffer limit for issuing warning

2010-05-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-namespace-put, soap-namespace-put-link)
	(soap-namespace-get): namespaces can now store multiple elements
	with the same name.
	(soap-wsdl-add-namespace, soap-wsdl-resolve-references): handle
	multiple elements with the same name.
	(soap-resolve-references-for-binding): request only port type
	elements.
	(soap-resolve-references-for-port): request only binding type
	elements.
	(soap-parse-complex-type): look for a name in an attribute tag